# superansac

./: .gitignore  CMakeLists.txt  README.md  setup.py
benchmark/: functions.py  tester-E-baseline.py
benchmark/datasets/: eth3d.py  kitti.py  lamar.py  seven_scenes.py
examples/: example_absolute_pose_fitting.ipynb  example_essential_matrix_fitting_roma.ipynb  example_essential_matrix_fitting_splg.ipynb  example_fundamental_matrix_fitting_roma.ipynb  example_fundamental_matrix_fitting_splg.ipynb  example_homography_fitting_roma.ipynb  example_homography_fitting_splg.ipynb  example_rigid_transform_fitting.ipynb
include/: settings.h  superansac.h
include/camera/: abstract_camera.h  simple_pinhole_camera.h  simple_radial_camera.h  types.h
include/data_type/: abstract_type.h  point_correspondence_2d2d.h
include/estimators/: abstract_estimator.h  abstract_solver.h  estimator_absolute_pose.h  estimator_essential_matrix.h  estimator_fundamental_matrix.h  estimator_homography.h  estimator_rigid_transformation.h  solver_epnp.h  solver_essential_matrix_bundle_adjustment.h  solver_essential_matrix_five_point_nister.h  solver_fundamental_matrix_bundle_adjustment.h  solver_fundamental_matrix_eight_point.h  solver_fundamental_matrix_seven_point.h  solver_homography_four_point.h  solver_p3p_lambda_twist.h  solver_pnp_bundle_adjustment.h  solver_rigid_transform_proscrutes.h
include/estimators/numerical_optimizer/: bundle.h  camera_pose.h  colmap_models.cc  essential.cc  essential.h  jacobian_impl.h  lm_impl.h  robust_loss.h  types.h
include/inlier_selectors/: abstract_inlier_selector.h  space_partitioning_ransac.h  types.h
include/local_optimization/: GCoptimization.cpp  GCoptimization.h  abstract_local_optimizer.h  block.h  cross_validation_optimizer.h  energy.h  graph.cpp  graph.h  graph_cut_ransac_optimizer.h  irls_optimizer.h  iterated_lmeds_optimizer.h  least_squares_optimizer.h  maxflow.cpp  nested_ransac_optimizer.h  types.h
include/models/: model.h
include/neighborhood/: abstract_neighborhood.h  flann_neighborhood_graph.h  grid_neighborhood_graph copy.h  grid_neighborhood_graph.h  nanoflann.hpp  types.h
include/samplers/: abstract_sampler.h  adaptive_reordering_sampler.h  importance_sampler.h  napsac_sampler.h  progressive_napsac_sampler copy.h  progressive_napsac_sampler.h  prosac_sampler copy.h  prosac_sampler.h  types.h  uniform_random_sampler.h
include/scoring/: abstract_scoring.h  acransac_scoring.h  gau_scoring.h  grid_scoring.h  magsac_look_up_table.h  magsac_scoring.h  magsac_sprt_scoring.h  minpran_scoring.h  ml_scoring.h  msac_scoring.h  ransac_scoring.h  score.h  types.h
include/termination/: abstract_criterion.h  ransac_criterion.h  types.h
include/utils/: macros.h  math_utils.h  sturm.h  types.h  uniform_random_generator.h  utils_point_correspondence.h
python/: CMakeLists.txt  pybind_functions.cpp  pybind_module.cpp
src/: CMakeLists.txt  superansac.cpp
tests/: colors_and_markers.py  evaluation.py  functions.py  tester-E-superansac.py  tester-F-baseline.py  tester-F-superansac.py  tester-H-baseline.py  tester-H-superansac.py  utils.py
tests/datasets/: amsterdam_house.py  eth3d.py  kitti.py  lamar.py  phototourism.py  scannet.py  seven_scenes.py
tests/essential_matrix/: tester_baseline.py  tester_superansac.py
tests/fundamental_matrix/: tester_baseline.py  tester_superansac.py
tests/homography/: tester_superansac.py
